# NBA_over_under_predictor

./: .gitignore  config.ini  create_nba_odds_db.py  pyproject.toml  requirements.txt  requirements_lab.txt  requirements_streamlit.txt  requirements_tabpfn.txt  requirements_user_tools.txt  run_predictor.py
.github/workflows/: monthly_db_backup.yml  nba_predictor.yml  nba_predictor_daily.yml  nba_predictor_daily_tabpfn_client.yml  retrain_prediction_models.yml  s3_model_smoke_test.yml  update_database_daily.yml  update_finished_matches.yml  update_finished_matches_daily.yml  update_games_players.yml
Predictions/: NBA_predictions_2025-12-25.xlsx
data/odds_data/: odds_data (Copy).csv  odds_data.csv
data/season_games_data/: nba_games_2006_07.csv  nba_games_2007_08.csv  nba_games_2008_09.csv  nba_games_2009_10.csv  nba_games_2010_11.csv  nba_games_2011_12.csv  nba_games_2012_13.csv  nba_games_2013_14.csv  nba_games_2014_15.csv  nba_games_2015_16.csv  nba_games_2016_17.csv  nba_games_2017_18.csv  nba_games_2018_19.csv  nba_games_2019_20.csv  nba_games_2020_21.csv  nba_games_2021_22.csv  nba_games_2022_23.csv  nba_games_2023_24.csv  nba_games_2024_25.csv  nba_games_2025_26.csv  nba_players_2025_26.csv
lab/check_methods/: asseert_equality_df.py  assert diferences in dfs.py  test_data_leakage.py
lab/scrape_odds/: analysis_odds_data.py  manage_odds_pickles.py  scrape_sportsbook.py  scrape_yahoo.py  scrape_yahoo_seasons.py
lab/tabpfn/: tabular_test timeseries.ipynb  tabular_test.ipynb
lab/train_classifier/: Classifier_nba_over_under_autoglue.ipynb  Evaluate_model_recent_games.ipynb  evaluate_data_leakage.ipynb
lab/train_regressor/: NBA_model_with_all_bets_regressor.ipynb  train_regressor_tabpfn.ipynb  train_regressor_total_points.ipynb
model/: production_classifier_xgb_2025-04-09.pkl
scripts/: backup_db_to_s3.py  nba_predictor.py  predict_nba_games.py  predict_nba_games_tabpfn.py  promote_prediction_models.py  retrain_prediction_models.py  smoke_test_s3_model_load.py  streamlit_app.py
scripts/clean_databases/: cleanup_players_minutes.py  diagnose_home_away_issues.py  fix_home_away_in_db.py  update_odds_given_season.py
scripts/create_train_data/: create_and_upload_historical_train_data.py  create_train_data.py
scripts/update_databases/: old_odds_update_all_databases.py  update_all_databases.py  update_finished_matches.py  update_games_players_database.py
src/: __init__.py  calculate_accuracy_stats.py  create_local_database_with_schema.py  nba_predictor.py  streamlit_app.py  update_finished_matches.py  update_games_players_database.py  update_referees_injuries_database.py
src/config/: __init__.py  constants.py  settings.py
src/create_training_data/: create_df_to_train.py
src/data_processing/: __init__.py  injury_processing.py  process_data_with_injuries.py  process_referee_data.py  statistics.py  statistics_v2.py  travel_processing.py  utils_analysis.py
src/manage_games_database/: update_database.py  update_database_utils.py
src/manage_odds_data/: update_odds.py  update_odds_utils.py
streamlit/: streamlit_app.py  streamlit_ou_app.py
tests/: __init__.py  test_read_injury_report.py  test_scheduled_player_rows.py
(+217 files in other folders)
