[tool.poetry]
name = "nba_over_under_predictor"
version = "0.1.0"
description = "NBA over/under prediction project."
authors = ["Adrian Alvarez"]
packages = [{ include = "nba_ou", from = "src" }]


[tool.poetry.dependencies]
python = "^3.11"
asttokens = "3.0.0"
certifi = "2025.1.31"
charset-normalizer = "3.4.1"
click = "8.1.8"
comm = "0.2.2"
contourpy = "1.3.1"
cycler = "0.12.1"
debugpy = "1.8.12"
decorator = "5.1.1"
executing = "2.2.0"
fonttools = "4.56.0"
idna = "3.10"
ipykernel = "6.29.5"
ipython = "8.32.0"
jedi = "0.19.2"
joblib = "1.4.2"
jupyter-client = "8.6.3"
jupyter-core = "5.7.2"
kiwisolver = "1.4.8"
matplotlib = "3.10.0"
matplotlib-inline = "0.1.7"
mypy-extensions = "1.0.0"
nba-api = "1.11.3"
nest-asyncio = "1.6.0"
packaging = "24.2"
pandas = "2.2.3"
parso = "0.8.4"
pathspec = "0.12.1"
pexpect = "4.9.0"
pillow = "11.1.0"
platformdirs = "4.3.6"
prompt-toolkit = "3.0.50"
psutil = "7.0.0"
ptyprocess = "0.7.0"
pure-eval = "0.2.3"
pygments = "2.19.1"
pyparsing = "3.2.1"
python-dateutil = "2.9.0.post0"
pytz = "2025.1"
pyzmq = "26.2.1"
requests = "2.32.3"
scikit-learn = "1.6.1"
scipy = "1.15.2"
six = "1.17.0"
stack-data = "0.6.3"
threadpoolctl = "3.5.0"
tornado = "6.4.2"
tqdm = "4.67.1"
traitlets = "5.14.3"
typing-extensions = "4.12.2"
tzdata = "2025.1"
urllib3 = "2.3.0"
wcwidth = "0.2.13"
xgboost = "2.1.4"
xlsxwriter = "3.2.2"
pymupdf = "^1.26.6"
beautifulsoup4 = "^4.14.2"
psycopg = "^3.3.2"
lxml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
isort = "^5.13.0"
ruff = "^0.6.0"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# -----------------------------
# Black configuration
# -----------------------------
[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.git
    | \.venv
    | build
    | dist
    | .mypy_cache
    | .ruff_cache
    | .pytest_cache
  )/
)
'''

# -----------------------------
# isort configuration
# -----------------------------
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
src_paths = ["."]
known_first_party = ["nba_over_under_predictor"]
default_section = "THIRDPARTY"
sections = [
  "FUTURE",
  "STDLIB",
  "THIRDPARTY",
  "FIRSTPARTY",
  "LOCALFOLDER"
]

# -----------------------------
# Ruff configuration
# -----------------------------
[tool.ruff]
line-length = 88
target-version = "py311"
src = ["."]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # import rules (aligned with isort)
  "B",  # bugbear
  "UP"  # pyupgrade
]
ignore = [
  "E203",
  "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["nba_over_under_predictor"]

# -----------------------------
# mypy configuration
# -----------------------------
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
